[package]
name = "mvt"
version = "0.9.2"
description = "A library for encoding mapbox vector tiles"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mvt"
repository = "https://github.com/DougLau/mvt"
readme = "README.md"
keywords = ["cartography", "gis", "vector", "tile", "mapbox"]
categories = ["encoding"]
edition = "2021"

[dependencies]
log = "0.4"
num-traits = "0.2"
pointy = "0.6"
protobuf = { path = "protobuf/protobuf" }
protobuf-codegen = { path = "protobuf/protobuf-codegen", optional = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[features]
update = ["protobuf-codegen"]

[[bin]]
# `cargo run --features=update` when updating to a new protobuf version
name = "mvt"
required-features = ["update"]
